@@ -18,6 +18,7 @@
 * Moved the duplicate lab name validation checking from the client to the server. (tcourdy)
 * Fixed Topics bugs. (rcundick)
 * Changed refresh of organize files window to include right hand tree as well. (rcundick)
+* Orion can't server large data track files (+ 2GB), so serve data track files (UCSC browser, generic links) from Apache Tomcat rather than Orion.  Web context (file path) and Tomcat webapp URL are GNomEx properties (datatrack_fileserver_url, datatrack_fileserver_web_context). (tdisera)
 
 5.4.3
 ---------------------
